--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
   font-family: "Hiragino Maru Gothic";
   text-align: center;
+  color: white;
   background-color: #000000;
   padding-bottom: 32px;
 }
